--- a/AirQualitySystemWeb/app/views/index.scala.html
+++ b/AirQualitySystemWeb/app/views/index.scala.html
@@ -132,11 +132,11 @@
         </div>
     </nav>
     <main role = "main">
-        <div class = "container">
+        <div class = "container-fluid" style="padding-top: 40px">
             <div class = "row">
-            <div class="col-md-4 col-xs-2">
+            <div class="col-md-3">
                 <div class="card border-dark" style="max-width: 13rem;">
-                    <div class="card-header">Header</div>
+                    <div class="card-header">Current level of CO2</div>
                     <div class="card-body text-dark">
                         <div id = "output">
                         </div>
