some changes in view and service files

--- a/AirQualitySystemWeb/app/views/index.scala.html
+++ b/AirQualitySystemWeb/app/views/index.scala.html
@@ -154,21 +154,23 @@
             </div>
 
             </div>
-            <div class="row">
+        </div>
+
+        <div class = "container-fluid">
+
 
                 <div id="graph"></div>
 
 
 
-            </div>
-            <div class="row">
-                <div id = "map"></div>
-
-
-
-            </div>
-
         </div>
+
+            <div class = "container-fluid" style="position: relative; width: 800px; height: 375px;">
+                <div id = "map"></div>
+            </div>
+
+
+
 
 
     </main>
