--- a/AirQualitySystemWeb/app/views/index.scala.html
+++ b/AirQualitySystemWeb/app/views/index.scala.html
@@ -5,8 +5,10 @@
 <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 <meta  name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-<script src="https://api.mapbox.com/mapbox-gl-js/v1.7.0/mapbox-gl.js"></script>
-<link href="https://api.mapbox.com/mapbox-gl-js/v1.7.0/mapbox-gl.css" rel="stylesheet" />
+<!-- <script src="https://api.mapbox.com/mapbox-gl-js/v1.7.0/mapbox-gl.js"></script>
+<link href="https://api.mapbox.com/mapbox-gl-js/v1.7.0/mapbox-gl.css" rel="stylesheet" /> -->
+<script src="https://api.tiles.mapbox.com/mapbox-gl-js/v0.44.2/mapbox-gl.js"></script>
+<link href="https://api.tiles.mapbox.com/mapbox-gl-js/v0.44.2/mapbox-gl.css" rel="stylesheet"/>
 <style>
         body { margin: 0; padding: 0; }
         #map { position: static; top: 0; bottom: 0;   margin: 0 auto; width: 70%; height: 75% }
@@ -167,7 +169,9 @@
     <footer class = "container">
         <p>Air Quality System 2020</p>
     </footer>
-    <script>
+    <script src="mapbox.js"></script>
+    <script src="token.js"></script>
+    <!-- <script>
             mapboxgl.accessToken = 'pk.eyJ1IjoibWVkaWsyNTEiLCJhIjoiY2pibTF1aTFiMzdwZDJxcXlqYTlncTV4diJ9.UkgwrgNPxdnl4FFVY1BGtw';
             var map = new mapboxgl.Map({
                 container: 'map', // container id
@@ -175,7 +179,7 @@
                 center: [-74.5, 40], // starting position [lng, lat]
                 zoom: 9 // starting zoom
             });
-    </script>
+    </script> -->
 
 </body>
 
