--- a/AirQualitySystemWeb/app/views/index.scala.html
+++ b/AirQualitySystemWeb/app/views/index.scala.html
@@ -11,7 +11,7 @@
 <link href="https://api.tiles.mapbox.com/mapbox-gl-js/v0.44.2/mapbox-gl.css" rel="stylesheet"/>
 <style>
         body { margin: 0; padding: 0; }
-        #map { position: static; top: 0; bottom: 0;   margin: 0 auto; width: 70%; height: 75% }
+        #map { position: static; top: 0; bottom: 0;width: 100%; height: 100%;   margin: 0 auto; }
 </style>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 <script language="javascript" type="text/javascript">
@@ -157,7 +157,7 @@
 
         </div>
 
-            <div class = "container-fluid" style="position: relative; width: 800px; height: 375px;">
+            <div class = "container-fluid" style="position: relative; width: 1100px; height: 700px;">
                 <div id = "map"></div>
             </div>
 
