--- a/AirQualitySystemWeb/app/views/index.scala.html
+++ b/AirQualitySystemWeb/app/views/index.scala.html
@@ -9,6 +9,8 @@
 <link href="https://api.mapbox.com/mapbox-gl-js/v1.7.0/mapbox-gl.css" rel="stylesheet" /> -->
 <script src="https://api.tiles.mapbox.com/mapbox-gl-js/v0.44.2/mapbox-gl.js"></script>
 <link href="https://api.tiles.mapbox.com/mapbox-gl-js/v0.44.2/mapbox-gl.css" rel="stylesheet"/>
+<script src="https://api.mapbox.com/mapbox-gl-js/v1.11.1/mapbox-gl.js"></script>
+<link href="https://api.mapbox.com/mapbox-gl-js/v1.11.1/mapbox-gl.css" rel="stylesheet" />
 <style>
         body { margin: 0; padding: 0; }
         #map { position: static; top: 0; bottom: 0;width: 100%; height: 100%;   margin: 0 auto; }
