--- a/AirQualitySystemWeb/app/views/index.scala.html
+++ b/AirQualitySystemWeb/app/views/index.scala.html
@@ -14,6 +14,18 @@
 <style>
         body { margin: 0; padding: 0; }
         #map { position: static; top: 0; bottom: 0;width: 100%; height: 100%;   margin: 0 auto; }
+        #marker {
+            background-image: url('https://docs.mapbox.com/mapbox-gl-js/assets/washington-monument.jpg');
+            background-size: cover;
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
+            cursor: pointer;
+        }
+
+        .mapboxgl-popup {
+            max-width: 200px;
+        }
 </style>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 <script language="javascript" type="text/javascript">
