--- a/AirQualitySystemWeb/app/views/index.scala.html
+++ b/AirQualitySystemWeb/app/views/index.scala.html
@@ -21,6 +21,7 @@
             height: 50px;
             border-radius: 50%;
             cursor: pointer;
+            draggable: true;
         }
 
         .mapboxgl-popup {
