--- a/AirQualitySystemWeb/app/views/index.scala.html
+++ b/AirQualitySystemWeb/app/views/index.scala.html
@@ -15,13 +15,20 @@
         body { margin: 0; padding: 0; }
         #map { position: static; top: 0; bottom: 0;width: 100%; height: 100%;   margin: 0 auto; }
         #marker {
-            background-image: url('https://docs.mapbox.com/mapbox-gl-js/assets/washington-monument.jpg');
             background-size: cover;
             width: 50px;
             height: 50px;
             border-radius: 50%;
             cursor: pointer;
-            draggable: true;
+        }
+
+        #markerStart {
+            background-image: url('https://docs.mapbox.com/mapbox-gl-js/assets/washington-monument.jpg');
+            background-size: cover;
+            width: 80px;
+            height: 80px;
+            border-radius: 50%;
+            cursor: pointer;
         }
 
         .mapboxgl-popup {
